fix(nav-bar-pill): fix not centred content in big screens

--- a/nav-bar-pill/styles.css
+++ b/nav-bar-pill/styles.css
@@ -39,6 +39,12 @@ header{
     justify-content: center;
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 p{
     max-width: 62ch;
 }
